# threadpoll

./: .gitignore  CMakeLists.txt  PollCore.cpp  PollCore.h  PollScheduler.cpp  PollScheduler.h  Threadpoll.cpp  Threadpoll.h  WorkerThread.cpp  WorkerThread.h  main.cpp  readme
